Adding saucelabs to toolchain
Adding saucelabs

--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -50,6 +50,9 @@ services:
         execute: true
   webide:
     service_id: orion
+  test:
+      service_id: saucelabs
+      $ref: saucelabs.yml
 form:
   pipeline:
     parameters:
