--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -11,6 +11,7 @@ template:
   required:
     - sample-build
     - sample-repo
+    - test
   info:
     git url: >-
       [https://github.com/irene221b/simple-toolchain-hosted](https://github.com/irene221b/simple-toolchain-hosted)
